unpackaged/main/default/objects/Cohort__c/Cohort__c.object-meta.xml
<CustomObject>
    <label>Cohort</label>
    <nameField>
        <label>Cohort Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cohorts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>