unpackaged/main/default/objects/Cohort__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>The maximum number of cohort students allowed.</description>
    <inlineHelpText>The maximum number of cohort students allowed.</inlineHelpText>
    <label>Capacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>