unpackaged/main/default/objects/Cohort__c/fields/CohortID_18__c.field-meta.xml
<CustomField>
    <fullName>CohortID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CohortID(18)</label>
    <type>Text</type>
</CustomField>