unpackaged/main/default/objects/Cohort__c/fields/Graduated_Students__c.field-meta.xml
<CustomField>
    <fullName>Graduated_Students__c</fullName>
    <label>Graduated Students</label>
    <summaryFilterItems>
        <field>Cohort_Student__c.Status__c</field>
        <operation>equals</operation>
        <value>Graduated</value>
    </summaryFilterItems>
    <summaryForeignKey>Cohort_Student__c.Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>