unpackaged/main/default/objects/Cohort__c/fields/Learning_Plan__c.field-meta.xml
<CustomField>
    <fullName>Learning_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Plan</label>
    <referenceTo>Learning_Plan__c</referenceTo>
    <relationshipLabel>Cohorts</relationshipLabel>
    <relationshipName>Cohorts</relationshipName>
    <type>Lookup</type>
</CustomField>