unpackaged/main/default/objects/Cohort__c/fields/Number_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Students__c</fullName>
    <label>Number of Students</label>
    <summaryFilterItems>
        <field>Cohort_Student__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Cohort_Student__c.Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>