unpackaged/main/default/objects/Cohort__c/recordTypes/GMEP.recordType-meta.xml
<RecordType>
    <fullName>GMEP</fullName>
    <active>true</active>
    <label>GMEP</label>
</RecordType>